Add image for header.

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">Zombeer.com</a></h1>
+      <img src="/images/zombeer.png" />
     </header>
     <section>
       {{ content }}
