--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -39,6 +39,9 @@
 	  <li>
 	    <a href="http://feeds.feedburner.com/Zombeer">rss</a>
 	  </li>
+	  <li>
+	    <a href="about.html">tick list</a>
+	  </li>
 	</ul>
     </nav>
     <section>
