--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -40,7 +40,7 @@
 	    <a href="http://feeds.feedburner.com/Zombeer">rss</a>
 	  </li>
 	  <li>
-	    <a href="about.html">tick list</a>
+	    <a href="beers.html">tick list</a>
 	  </li>
 	</ul>
     </nav>
